force-app/main/default/objects/Milestone__c/fields/CompletedToDoItemsRelated__c.field-meta.xml
<CustomField>
    <fullName>CompletedToDoItemsRelated__c</fullName>
    <description>Number of completed to-do items related to the mileston.</description>
    <inlineHelpText>Number of completed to-do items related to the mileston.</inlineHelpText>
    <label>Completed To-Do items</label>
    <summaryFilterItems>
        <field>ToDoItem__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>ToDoItem__c.Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>