force-app/main/default/objects/Milestone__c/fields/Completion__c.field-meta.xml
<CustomField>
    <fullName>Completion__c</fullName>
    <formula>BLANKVALUE((CompletedToDoItemsRelated__c  /  ToDoItemsRelated__c) , 0)</formula>
    <label>Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>