force-app/main/default/objects/Milestone__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Field defined to store information that will be executed by the user.</description>
    <inlineHelpText>Field defined to store information that will be executed by the user.</inlineHelpText>
    <label>Description</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>