force-app/main/default/objects/Milestone__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>Start date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>