force-app/main/default/objects/Milestone__c/fields/ToDoItemsRelated__c.field-meta.xml
<CustomField>
    <fullName>ToDoItemsRelated__c</fullName>
    <description>Number of to-do items related to the milestone.</description>
    <inlineHelpText>Number of to-do items related to the milestone.</inlineHelpText>
    <label>To-Do items</label>
    <summaryForeignKey>ToDoItem__c.Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>