force-app/main/default/objects/Milestone__c/validationRules/Required_milestone_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_milestone_name</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please fill in the milestone name.</errorMessage>
</ValidationRule>